# rustyrobot

./: .gitignore  .travis.yml  Cargo.toml  prime_kafka.sh
api/: Cargo.toml
api/res/: repo_query.gql
api/src/: github.rs  lib.rs  service.rs
api/src/db/: mod.rs  queue.rs  stats.rs
api/src/github/: mod.rs  utils.rs  v4.rs
api/src/github/v3/: mod.rs
api/src/github/v4/: client.rs  github.rs  mod.rs
api/src/search/: mod.rs  query.rs
common/: Cargo.toml
common/src/: error_chain_failure_interop.rs  lib.rs  macros.rs  shutdown.rs
common/src/github/: mod.rs  utils.rs
common/src/github/v3/: mod.rs
common/src/github/v4/: client.rs  github.rs
common/src/kafka/: github.rs  mod.rs  util.rs
common/src/kafka/util/: handler.rs  mod.rs  producer.rs  state.rs
common/src/search/: mod.rs  query.rs
common/src/types/: mod.rs  repo.rs
dumper/: Cargo.toml
dumper/src/: main.rs
event-handler/: Cargo.toml
event-handler/src/: main.rs
fetcher/: Cargo.toml
fetcher/src/: fetcher.rs  main.rs
fetcher/src/strategy/: datewindow.rs  mod.rs  simple.rs
fixer/: Cargo.toml
forker/: Cargo.toml
forker/src/: main.rs
formatter/: Cargo.toml
formatter/src/: git.rs  main.rs
github/: Cargo.toml  prime_kafka.sh
github/src/: main.rs
pr-issuer/: Cargo.toml  pr_message.md
pr-issuer/src/: main.rs
rustfmt-bot/: Cargo.toml
rustfmt-bot/src/: dump.rs  main.rs  shutdown.rs
rustfmt-bot/src/fetcher/: mod.rs
rustfmt-bot/src/fetcher/strategy/: datewindow.rs  mod.rs  simple.rs
rustfmt-bot/src/types/: mod.rs  repo.rs
util/delete-forks/: Cargo.toml
util/delete-forks/src/: main.rs
