[package]
name = "rustyrobot"
version = "0.1.0"
authors = ["Mike Lubinets <lubinetsm@yandex.ru>"]

[dependencies]
github-gql-rs = "0.0.1"
github-rs = "0.6.1"
dotenv = "0.13.0"
failure = "0.1.2"
serde = "1.0.71"
serde_json = "1.0.24"
serde_derive = "1.0.71"
chrono = { version = "0.4.5", features = ["serde"] }
shell-escape = "0.1.4"
log = "0.4.3"
lazy_static = "1.1.0"
rdkafka = "0.17.0"
threadpool = "1.7.1"
uuid = { version = "0.7.1", features = ["serde", "v4"] }
env_logger = "0.5.13"

[dev-dependencies]
tempfile = "3.0.3"
