[package]
name = "github-rustfmt-bot"
version = "0.1.0"
authors = ["Mike Lubinets <lubinetsm@yandex.ru>"]

[dependencies]
rocksdb = "0.10.1"
serde_derive = "1.0.71"
serde = "1.0.71"
serde_json = "1.0.24"
chrono = { version = "0.4.5", features = ["serde"] }
log = "0.4.3"
fern = "0.5.6"
failure = "0.1.2"
ctrlc = "3.1.1"

[dependencies.github-rustfmt-bot-api]
path = "../api"

